Base map feature added
- zoomable map
- default coordinates at DLSU
- placeholder button for full size view

--- a/Openlayers_web_map/index.html
+++ b/Openlayers_web_map/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/css/ol.css" type="text/css">
-<script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js"></script>
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/css/ol.css" type="text/css">
+    <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <style>
         .map {
           height: 400px;
-          width: 50%;
+          width: 40.5%;
+          padding-left: 45px;
         }
 
         #header {
             text-align: center;
         }
-      </style>
-  <title>Open Layers testing</title>
+    </style>
+    <title>Open Layers testing</title>
 </head>
 <body>
 <h2>My Map</h2>
